--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "com.unity.ide.visualstudio": "2.0.15",
     "com.unity.ide.vscode": "1.2.5",
+    "com.unity.inputsystem": "1.2.0",
     "com.unity.test-framework": "1.1.31",
     "com.unity.ugui": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
